--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -9,7 +9,7 @@
 
 body{
     font: 400 14px Roboto, sans-serif;
-    background: #f0f0f5;
+    background: #DCDCDC;
     -webkit-font-smothing: antialiased;
 }
 
@@ -28,6 +28,16 @@ form input {
     border: 1px solid #dcdce6;
     border-radius: 8px;
     padding: 0 24px;
+}
+form textarea {
+    width: 100%;
+    min-height: 140px;
+    color: #333;
+    resize: vertical;
+    border: 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 16px 24px;
+    line-height: 24px;
 }
 
 .button{
@@ -48,4 +58,23 @@ form input {
 
 .button:hover{
     filter: brightness(90%);
+}
+
+.back-link{
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    color: #41414d;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: 500;
+    transition: opacity 0.2s;
+}
+
+.back-link svg{
+    margin-right: 8px;
+}
+
+.back-link:hover{
+    opacity: 0.8;
 }
